fix visible color for expand community ancor when hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,11 @@ body {
     width: 50%;
 }
 
+.event a:hover {
+    color: #386C5F;
+}
+
+
 /*footer*/
 
 footer {
